--- a/src/App.css
+++ b/src/App.css
@@ -125,10 +125,24 @@ h4 {
   text-align: center; /* Center the text */
   display: block; /* Ensure it behaves like a block element */
   width: 100%;
+  text-decoration: underline;
 }
 
-.label-text {
+.container .label-text {
   color: #42424282;  
   font-size: 1rem;    
   font-weight: normal;
 }
+
+.result-box {
+  display: inline-block;   
+  padding: 0.5rem 1rem;    
+  border: 2px solid #42424282;  
+  /* border: 2px solid red; */
+  width: 100%;
+  border-radius: 5px;      
+  background-color: #f4f4f4; 
+  font-weight: bold;       
+  font-size: 1.2rem;       
+}
+
